--- a/style.css
+++ b/style.css
@@ -6,28 +6,6 @@ body {
 	position: relative;
 }
 
-/*#svg_container {
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	width: 50%;
-	height: 90%;
-	border: 1px solid black;
-	max-width: 50%;
-	min-width: 50%;
-}
-
-#controls_container {
-	position: absolute;
-	right: 0px;
-	top: 0px;
-	width: 50%;
-	max-width: 50%;
-	min-width: 50%;
-	height: 50%;
-	border: 1px solid green;
-}*/
-
 #wrapper {
 	position: absolute;
 	left: 0px;
@@ -35,11 +13,11 @@ body {
 	width: 100%;
 	height: 95%;
 	border: 1px solid black;
-	max-width: 100%;
+	max-width: 150%;
 	min-width: 100%;
 }
 
-.wrapper_id {
+.wrapper_td {
 	position: relative;
 	width: 50%;
 	max-width: 50%;
@@ -49,12 +27,31 @@ body {
 
 #controls {
 	position: relative;
-	width: 100%;
+	width: 150%;
 	height: 100%;
+	max-width: 500px;
+}
+
+#svg_container {
+	min-width: 700px;
 }
 
 svg {
 	position: relative;
 	width: 100%;
 	height: 100%;
+}
+
+#vert_input {
+	width: 220px;
+}
+
+#adj_matrix td {
+	width: 20px;
+	max-width: 20px;
+}
+
+#adj_matrix input {
+	width: 20px;
+	max-width: 20px;
 }
